# ja-translate

./: .gitignore  IFLOW.md  README.md  bilingual.css  epub_packer.py  epub_translator.py  pyproject.toml  vertical_text_proofreader.py
.iflow/agents/: ja-zh-translator.md
.trae/documents/: plan_20251219_042253.md  plan_20251219_075459.md  为双语对照翻译添加样式区分 (1).md  为双语对照翻译添加样式区分.md  优化会话管理，提高翻译性能.md  修复HTML翻译嵌套问题.md  修复空段落生成问题.md  实现原文淡化效果.md  竖排文本标点符号校对工具实现计划.md  编写项目README文档.md
.trae/rules/: project_rules.md
