[project]
name = "ja-translate"
version = "0.1.0"
description = "日文EPUB书籍翻译项目"
authors = [{name = "Author", email = "author@example.com"}]
dependencies = [
    "iflow-sdk>=0.1.0",
    "beautifulsoup4>=4.12.0",
]
readme = "IFLOW.md"
requires-python = ">=3.8"

[project.scripts]
translate = "epub_translator:main"