[project]
name = "ja-translate"
version = "0.1.0"
description = "日文EPUB书籍翻译项目"
authors = [{name = "Author", email = "author@example.com"}]
dependencies = [
    "iflow-cli-sdk>=0.1.14",
    "beautifulsoup4>=4.12.0",
    "psutil>=5.8.0",
    "python-dotenv>=1.0.0",
]
readme = "README.md"
requires-python = ">=3.8"

[project.scripts]
translate = "epub_translator:main"
pack = "epub_packer:main"
